workflow for github actions

--- a/MagicBot/appsettings.json
+++ b/MagicBot/appsettings.json
@@ -7,6 +7,6 @@
         }
     },
     "AppSettings": {
-        "TokenFileLocation" : "E:\\Dev\\TelegramBots\\MagicBot\\token.txt"
+        "TokenFileLocation" : "C:\\Users\\Administrator\\Desktop\\MagicBot\\token.txt"
     }
 }
