--- a/appspec.yml
+++ b/appspec.yml
@@ -5,10 +5,10 @@ files:
    destination: C:\Users\Administrator\Desktop\Repo\MagicBot
 hooks:
   AfterInstall:
-   - location: C:\Users\Administrator\Desktop\Repo\MagicBot\scripts\build.ps1
+   - location: scripts\build.ps1
      timeout: 300
      runas: root
   ApplicationStart:
-   - location: C:\Users\Administrator\Desktop\Repo\MagicBot\scripts\start_app.ps1
+   - location: scripts\start_app.ps1
      timeout: 300
      runas: root
